Corrected deeply nested section titles to not be too small.

--- a/src/docbkx/css/cometd.css
+++ b/src/docbkx/css/cometd.css
@@ -10,6 +10,11 @@ h1, h2, h3, h4, h5, h6
 {
     color: #369;
 }
+h5, h6
+{
+    font-size: 100%;
+    margin: 0;
+}
 
 pre
 {
